# phone_location_sub_py

./: README.md  pyproject.toml  requirements.txt
phone_location_sub_py/: model.py  sub_and_write.py
