[tool.poetry]
name = "phone-location-sub-py"
version = "0.1.0"
description = ""
authors = ["David Harrison <david@davidbharrison.com>"]
readme = "README.md"
packages = [{include = "phone_location_sub_py"}]

[tool.poetry.dependencies]
python = "^3.9"
paho-mqtt = "^1.6.1"
sqlalchemy = "^1.4.44"
mysqlclient = "^2.1.1"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
